--- a/HTML/mazceramics/bootstrap.css
+++ b/HTML/mazceramics/bootstrap.css
@@ -2072,7 +2072,7 @@ table td[class*="span"] ,
 	background-color: #e7e7e7;
 }
 @font-face {
-	font-family: 'FontAwesome'; src: url("../assets/fontawesome/font/fontawesome-webfont.eot?v=3.2.1"); src: url("../assets/fontawesome/font/fontawesome-webfont.eot?#iefix&v=3.2.1") format("embedded-opentype"), url("../assets/fontawesome/font/fontawesome-webfont.woff?v=3.2.1") format("woff"), url("../assets/fontawesome/font/fontawesome-webfont.ttf?v=3.2.1") format("truetype"), url("../assets/fontawesome/font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1") format("svg"); font-weight: normal; font-style: normal;
+	font-family: 'FontAwesome'; src: url("./fonts/fontawesome-webfont.eot"); src: url("./fonts/fontawesome-webfont.eot") format("embedded-opentype"), url("../assets/fontawesome/font/fontawesome-webfont.woff?v=3.2.1") format("woff"), url("../assets/fontawesome/font/fontawesome-webfont.ttf?v=3.2.1") format("truetype"), url("../assets/fontawesome/font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1") format("svg"); font-weight: normal; font-style: normal;
 	}
 
 
@@ -12697,8 +12697,18 @@ form.navbar-form input[type="text"]{border-color:#ccc;margin-top: 6px;}
  }
  .per-page li:hover a .right-arrow:after{color:#fff;}
  
+/*  adding deema */
+
  #block {
  	background: url("products_new/IMGL3053.jpg") no-repeat center; 
  	height: 550px;
  	background-size: cover;
  }
+
+@font-face { 
+  font-family: 'Fira_Sans'; 
+  src: url('./fonts/Fira_Sans/FiraSans-Italic.ttf')  format('truetype'), 
+       url('webfont.woff') format('woff'); 
+  font-weight: normal; 
+  font-style: italic; 
+}
